// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render and handle clicks correctly 1`] = `
<div
  class="navigation"
>
  <div
    class="header"
  >
    <span
      class="logo"
      title="2.0.0-RC1"
    >
      <span
        aria-label="su-sulu-logo"
        class="su-sulu-logo"
      />
    </span>
  </div>
  <div
    class="items"
  >
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="su-search"
          class="su-search icon"
        />
        <span
          class="text"
        >
          Search
        </span>
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-bullseye"
          class="fa fa-bullseye icon"
        />
        <span
          class="text"
        >
          Webspaces
        </span>
      </div>
    </div>
  </div>
  <div
    class="footer"
  >
    <div
      class="userSection"
    >
      <div
        class="button"
        role="button"
      >
        <div
          class="userImage"
        >
          <span
            aria-label="su-user"
            class="su-user placeholder"
          />
        </div>
        <span
          class="username"
        >
          John Terence Maximilian Travolta
        </span>
        <span
          aria-label="su-angle-up"
          class="su-angle-up"
        />
      </div>
      <div
        class="menu"
      >
        <button
          class="button text hasText menuButton"
          type="button"
        >
          <span
            aria-label="su-user"
            class="su-user buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_admin.edit_profile
          </span>
        </button>
        <button
          class="button text hasText menuButton"
          type="button"
        >
          <span
            aria-label="su-sign-out-alt"
            class="su-sign-out-alt buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_admin.logout
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`The component should render with all available props and handle clicks correctly 1`] = `
<div
  class="navigation"
>
  <div
    class="header"
  >
    <span
      class="logo"
      title="2.0.0-RC1"
    >
      <span
        aria-label="su-sulu-logo"
        class="su-sulu-logo"
      />
    </span>
    <div
      class="pin"
      role="button"
    >
      <span
        aria-label="su-stick-right"
        class="su-stick-right pinIcon"
      />
    </div>
  </div>
  <div
    class="items"
  >
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="su-search"
          class="su-search icon"
        />
        <span
          class="text"
        >
          Search
        </span>
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="su-webspace"
          class="su-webspace icon"
        />
        <span
          class="text"
        >
          Webspaces
        </span>
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-image"
          class="fa fa-image icon"
        />
        <span
          class="text"
        >
          Media
        </span>
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-newspaper-o"
          class="fa fa-newspaper-o icon"
        />
        <span
          class="text"
        >
          Article
        </span>
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-sticky-note-o"
          class="fa fa-sticky-note-o icon"
        />
        <span
          class="text"
        >
          Snippets
        </span>
      </div>
    </div>
    <div
      class="item active"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="su-user-1"
          class="su-user-1 icon"
        />
        <span
          class="text"
        >
          Contact
        </span>
        <span
          aria-label="su-angle-down"
          class="su-angle-down clickable childrenIndicator"
          role="button"
          tabindex="0"
        />
      </div>
      <div>
        <div
          class="item"
        >
          <div
            class="title"
            role="button"
          >
            <span
              class="text"
            >
              Contact 1
            </span>
          </div>
        </div>
        <div
          class="item active"
        >
          <div
            class="title"
            role="button"
          >
            <span
              class="text"
            >
              Contact 2
            </span>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="title"
            role="button"
          >
            <span
              class="text"
            >
              Contact 3
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-gear"
          class="fa fa-gear icon"
        />
        <span
          class="text"
        >
          Settings
        </span>
        <span
          aria-label="su-angle-right"
          class="su-angle-right clickable childrenIndicator"
          role="button"
          tabindex="0"
        />
      </div>
    </div>
  </div>
  <div
    class="footer"
  >
    <div
      class="userSection"
    >
      <div
        class="button"
        role="button"
      >
        <div
          class="userImage"
        >
          <img
            alt="John Travolta"
            class="image"
            src="http://lorempixel.com/200/200"
            title="John Travolta"
          />
        </div>
        <span
          class="username"
        >
          John Travolta
        </span>
        <span
          aria-label="su-angle-up"
          class="su-angle-up"
        />
      </div>
      <div
        class="menu"
      >
        <button
          class="button text hasText menuButton"
          type="button"
        >
          <span
            aria-label="su-user"
            class="su-user buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_admin.edit_profile
          </span>
        </button>
        <button
          class="button text hasText menuButton"
          type="button"
        >
          <span
            aria-label="su-sign-out-alt"
            class="su-sign-out-alt buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_admin.logout
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
